[gd_scene load_steps=4 format=3 uid="uid://dub47pjvf1lmt"]

[ext_resource type="Script" uid="uid://bee5o2fqmov5i" path="res://Objects/chest.gd" id="1_s3ywg"]
[ext_resource type="SpriteFrames" uid="uid://ssm75mtmj3g3" path="res://chestanim.tres" id="2_7ujht"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s3ywg"]
radius = 21.0

[node name="Chest" type="Node2D"]
script = ExtResource("1_s3ywg")

[node name="chestSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_7ujht")
animation = &"open"

[node name="BubblesSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = ExtResource("2_7ujht")
animation = &"Bubbles"
frame = 10
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_s3ywg")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
